--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-day-picker": "8.3.6",
     "react-dom": "18.2.0",
     "react-map-gl": "7.0.19",
+    "react-range": "^1.8.14",
     "use-debounce": "8.0.4"
   },
   "devDependencies": {
