--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build.environment]
 
 [context.production.branch-deploy]
-    command = "mv robots.txt robots.txt"
+    command = "mv robotslocal.txt robots.txt"
 
 
 [context.production]
-    command = "mv robots.txt robots.txt"
+    command = "mv robotslocal.txt robots.txt"
