--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-joyride": "^2.5.3",
     "react-map-gl": "7.0.19",
     "react-range": "^1.8.14",
-    "use-debounce": "8.0.4"
+    "swr": "^2.1.0",
+    "use-debounce": "^8.0.4"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
